--- a/odoo_device/views/access_device.xml
+++ b/odoo_device/views/access_device.xml
@@ -1,3 +1,4 @@
+<odoo>
 <record id="access_x_device_manager" model="ir.model.access">
     <field name="name">access_x_device_manager</field>
     <field name="model_id" ref="model_x_device"/>
@@ -17,3 +18,4 @@
     <field name="perm_create">0</field>
     <field name="perm_unlink">0</field>
 </record>
+</odoo>
