--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,3 +1,4 @@
+<odoo>
 <record id="model_x_device_connection" model="ir.model">
     <field name="name">x.device.connection</field>
     <field name="model">x.device.connection</field>
@@ -64,3 +65,4 @@
         </tree>
     </field>
 </record>
+</odoo>
