--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -85,7 +85,8 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem id="menu_device_connections_action" name="Device Connections" parent="menu_device_connection" action="action_device_connection" sequence="1"/>
+    <!-- Correct Parent Menu Item for Device Connections -->
+    <menuitem id="menu_device_connections_action" name="Device Connections" parent="menu_device_connection" action="action_device_connection" sequence="2"/>
 
     <!-- Devices Menu -->
     <menuitem id="menu_device" name="Devices" parent="menu_parent_device" sequence="2"/>
@@ -97,5 +98,27 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+    <!-- Corrected Parent for Devices -->
     <menuitem id="menu_device_action" name="Devices" parent="menu_device" action="action_device" sequence="1"/>
+
+    <!-- Access Control for Device and Device Connection -->
+    <record id="access_device_manager" model="ir.model.access">
+        <field name="name">access_device_manager</field>
+        <field name="model_id" ref="model_x_device"/>
+        <field name="group_id" ref="base.group_user"/>
+        <field name="perm_read">1</field>
+        <field name="perm_write">1</field>
+        <field name="perm_create">1</field>
+        <field name="perm_unlink">1</field>
+    </record>
+
+    <record id="access_device_user" model="ir.model.access">
+        <field name="name">access_device_user</field>
+        <field name="model_id" ref="model_x_device"/>
+        <field name="group_id" ref="base.group_user"/>
+        <field name="perm_read">1</field>
+        <field name="perm_write">0</field>
+        <field name="perm_create">0</field>
+        <field name="perm_unlink">0</field>
+    </record>
 </odoo>
