--- a/odoo_device/views/menu.xml
+++ b/odoo_device/views/menu.xml
@@ -1,10 +1,7 @@
 <odoo>
-    <!-- Main menu -->
-    <menuitem id="menu_device_root" name="Device Management" sequence="10" app="true"/>
-
-    <!-- Submenu for devices -->
-    <menuitem id="menu_x_device" name="Devices" parent="menu_x_device_root" sequence="10"/>
-
-    <!-- Submenu for device connections -->
-    <menuitem id="menu_x_device_connection" name="Connections" parent="menu_x_device_root" sequence="20"/>
+    <data>
+        <menuitem id="menu_device_root" name="Device Management" sequence="10" app="true"/>
+        <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10"/>
+        <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20"/>
+    </data>
 </odoo>
