--- a/odoo_device/views/connection_views.xml
+++ b/odoo_device/views/connection_views.xml
@@ -1,16 +1,18 @@
 <odoo>
-    <record id="view_x_device_connection_form" model="ir.ui.view">
-        <field name="name">x.device.connection.form</field>
-        <field name="model">x.device.connection</field>
-        <field name="arch" type="xml">
-            <form string="Device Connection">
-                <sheet>
-                    <group>
-                        <field name="device_id" string="Device" required="1"/>
-                        <field name="url" string="URL to Fetch JSON From" required="1"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
+    <data>
+        <record id="view_x_device_connection_form" model="ir.ui.view">
+            <field name="name">x.device.connection.form</field>
+            <field name="model">x.device.connection</field>
+            <field name="arch" type="xml">
+                <form string="Device Connection">
+                    <sheet>
+                        <group>
+                            <field name="device_id" string="Device" required="1"/>
+                            <field name="url" string="URL to Fetch JSON From" required="1"/>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+    </data>
 </odoo>
