--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,15 +1,17 @@
 <odoo>
-    <record id="view_x_device_form" model="ir.ui.view">
-        <field name="name">x.device.form</field>
-        <field name="model">x.device</field>
-        <field name="arch" type="xml">
-            <form string="Device">
-                <sheet>
-                    <group>
-                        <field name="name" string="Device Name" required="1"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
+    <data>
+        <record id="view_x_device_form" model="ir.ui.view">
+            <field name="name">x.device.form</field>
+            <field name="model">x.device</field>
+            <field name="arch" type="xml">
+                <form string="Device">
+                    <sheet>
+                        <group>
+                            <field name="name" string="Device Name" required="1"/>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+    </data>
 </odoo>
