--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,5 +1,22 @@
 <odoo>
     <data>
+        <!-- View for device connection -->
+        <record id="view_x_device_connection_form" model="ir.ui.view">
+            <field name="name">x.device.connection.form</field>
+            <field name="model">x.device.connection</field>
+            <field name="arch" type="xml">
+                <form string="Device Connection">
+                    <sheet>
+                        <group>
+                            <field name="device_id" string="Device" required="1"/>
+                            <field name="url" string="URL to Fetch JSON From" required="1"/>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
+        <!-- View for device -->
         <record id="view_x_device_form" model="ir.ui.view">
             <field name="name">x.device.form</field>
             <field name="model">x.device</field>
@@ -13,5 +30,10 @@
                 </form>
             </field>
         </record>
+
+        <!-- Menu items -->
+        <menuitem id="menu_device_root" name="Device Management" sequence="10" app="true"/>
+        <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10"/>
+        <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20"/>
     </data>
 </odoo>
