--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,7 +1,6 @@
 <odoo>
     <data>
-
-        <!-- View for device connection -->
+        <!-- Form view for device connection -->
         <record id="view_x_device_connection_form" model="ir.ui.view">
             <field name="name">x.device.connection.form</field>
             <field name="model">x.device.connection</field>
@@ -17,7 +16,7 @@
             </field>
         </record>
 
-        <!-- View for device -->
+        <!-- Form view for device -->
         <record id="view_x_device_form" model="ir.ui.view">
             <field name="name">x.device.form</field>
             <field name="model">x.device</field>
@@ -32,10 +31,23 @@
             </field>
         </record>
 
+        <!-- Action for device -->
+        <record id="action_x_device" model="ir.actions.act_window">
+            <field name="name">Devices</field>
+            <field name="res_model">x.device</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!-- Action for device connection -->
+        <record id="action_x_device_connection" model="ir.actions.act_window">
+            <field name="name">Device Connections</field>
+            <field name="res_model">x.device.connection</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
         <!-- Menu items -->
         <menuitem id="menu_device_root" name="Device Management" sequence="10" app="true"/>
-        <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10"/>
-        <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20"/>
-
+        <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10" action="action_x_device"/>
+        <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20" action="action_x_device_connection"/>
     </data>
 </odoo>
