--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -50,4 +50,25 @@
         <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10" action="action_x_device"/>
         <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20" action="action_x_device_connection"/>
     </data>
+
+    <!-- Access rights -->
+    <record id="access_x_device" model="ir.model.access">
+        <field name="name">access_x_device</field>
+        <field name="model_id" ref="model_x_device"/>
+        <field name="group_id" ref="base.group_user"/>  <!-- You can change this to the desired group -->
+        <field name="perm_read" eval="1"/>
+        <field name="perm_write" eval="1"/>
+        <field name="perm_create" eval="1"/>
+        <field name="perm_unlink" eval="1"/>
+    </record>
+
+    <record id="access_x_device_connection" model="ir.model.access">
+        <field name="name">access_x_device_connection</field>
+        <field name="model_id" ref="model_x_device_connection"/>
+        <field name="group_id" ref="base.group_user"/>  <!-- You can change this to the desired group -->
+        <field name="perm_read" eval="1"/>
+        <field name="perm_write" eval="1"/>
+        <field name="perm_create" eval="1"/>
+        <field name="perm_unlink" eval="1"/>
+    </record>
 </odoo>
