--- a/odoo_device/views/device_views.xml
+++ b/odoo_device/views/device_views.xml
@@ -1,74 +1,36 @@
 <odoo>
-    <data>
-        <!-- Form view for device connection -->
-        <record id="view_x_device_connection_form" model="ir.ui.view">
-            <field name="name">x.device.connection.form</field>
-            <field name="model">x.device.connection</field>
-            <field name="arch" type="xml">
-                <form string="Device Connection">
-                    <sheet>
-                        <group>
-                            <field name="device_id" string="Device" required="1"/>
-                            <field name="url" string="URL to Fetch JSON From" required="1"/>
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
-
-        <!-- Form view for device -->
-        <record id="view_x_device_form" model="ir.ui.view">
-            <field name="name">x.device.form</field>
-            <field name="model">x.device</field>
-            <field name="arch" type="xml">
-                <form string="Device">
-                    <sheet>
-                        <group>
-                            <field name="name" string="Device Name" required="1"/>
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
-
-        <!-- Action for device -->
-        <record id="action_x_device" model="ir.actions.act_window">
-            <field name="name">Devices</field>
-            <field name="res_model">x.device</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-
-        <!-- Action for device connection -->
-        <record id="action_x_device_connection" model="ir.actions.act_window">
-            <field name="name">Device Connections</field>
-            <field name="res_model">x.device.connection</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-
-        <!-- Menu items -->
-        <menuitem id="menu_device_root" name="Device Management" sequence="10" app="true"/>
-        <menuitem id="menu_x_device" name="Devices" parent="menu_device_root" sequence="10" action="action_x_device"/>
-        <menuitem id="menu_x_device_connection" name="Connections" parent="menu_device_root" sequence="20" action="action_x_device_connection"/>
-    </data>
-
-    <!-- Access rights -->
-    <record id="access_x_device" model="ir.model.access">
-        <field name="name">access_x_device</field>
-        <field name="model_id" ref="model_x_device"/>
-        <field name="group_id" ref="base.group_user"/>  <!-- You can change this to the desired group -->
-        <field name="perm_read" eval="1"/>
-        <field name="perm_write" eval="1"/>
-        <field name="perm_create" eval="1"/>
-        <field name="perm_unlink" eval="1"/>
+    <record id="view_device_tree" model="ir.ui.view">
+        <field name="name">devices.device.tree</field>
+        <field name="model">devices.device</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="device_id"/>
+            </tree>
+        </field>
     </record>
 
-    <record id="access_x_device_connection" model="ir.model.access">
-        <field name="name">access_x_device_connection</field>
-        <field name="model_id" ref="model_x_device_connection"/>
-        <field name="group_id" ref="base.group_user"/>  <!-- You can change this to the desired group -->
-        <field name="perm_read" eval="1"/>
-        <field name="perm_write" eval="1"/>
-        <field name="perm_create" eval="1"/>
-        <field name="perm_unlink" eval="1"/>
+    <record id="view_device_form" model="ir.ui.view">
+        <field name="name">devices.device.form</field>
+        <field name="model">devices.device</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="device_id"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <menuitem id="menu_devices_root" name="Devices" sequence="1" action=""/>
+    <menuitem id="menu_device" name="Devices" parent="menu_devices_root" action="action_device"/>
+    
+    <record id="action_device" model="ir.actions.act_window">
+        <field name="name">Devices</field>
+        <field name="res_model">devices.device</field>
+        <field name="view_mode">tree,form</field>
     </record>
 </odoo>
