--- a/odoo_device/views/connection_views.xml
+++ b/odoo_device/views/connection_views.xml
@@ -41,5 +41,6 @@
     </record>
 
     <!-- Menu Items -->
+    <menuitem id="menu_devices_root" name="Devices" sequence="1"/>
     <menuitem id="menu_connection" name="Connections" parent="menu_devices_root" action="action_connection"/>
 </odoo>
